--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,12 @@
 DATABASE_URL=
 DIRECT_URL=
 # SHADOW_DATABASE_URL=...
+
+OPENAI_API_KEY=
+
+TRIGGER_API_KEY=
+TRIGGER_API_URL=
+NEXT_PUBLIC_TRIGGER_PUBLIC_API_KEY=
+
+REDIS_REST_URL=
+REDUS_REST_TOKEN=
