--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@trigger.dev/nextjs": "^2.3.18",
+    "@trigger.dev/react": "^2.3.18",
+    "@trigger.dev/sdk": "^2.3.18",
     "@upstash/redis": "^1.28.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "date-fns": "^3.6.0",
     "fast-xml-parser": "^4.3.4",
     "langchain": "^0.1.17",
     "lucide-react": "^0.323.0",
@@ -42,6 +46,7 @@
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.1.7",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-latex-next": "^2.2.0",
     "simple-icons": "^11.3.0",
@@ -51,10 +56,7 @@
     "tailwindcss-animate": "^1.0.7",
     "undici": "^6.6.2",
     "zod": "^3.22.4",
-    "zustand": "^4.5.0",
-    "@trigger.dev/sdk": "^2.3.18",
-    "@trigger.dev/nextjs": "^2.3.18",
-    "@trigger.dev/react": "^2.3.18"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
