chore: env updates

--- a/.env.template
+++ b/.env.template
@@ -9,4 +9,6 @@ TRIGGER_API_URL=
 NEXT_PUBLIC_TRIGGER_PUBLIC_API_KEY=
 
 REDIS_REST_URL=
-REDUS_REST_TOKEN=
+REDIS_REST_TOKEN=
+
+POSTMARK_SERVER_TOKEN=
