--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@langchain/core": "^0.1.25",
     "@langchain/openai": "^0.0.14",
     "@neondatabase/serverless": "^0.8.1",
@@ -45,9 +46,11 @@
     "next-themes": "^0.2.1",
     "pdf-parse": "^1.1.1",
     "pgvector": "^0.1.7",
+    "postmark": "^4.0.2",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-latex-next": "^2.2.0",
     "simple-icons": "^11.3.0",
     "sonner": "^1.4.0",
@@ -55,6 +58,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "undici": "^6.6.2",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
