--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fast-xml-parser": "^4.3.4",
     "langchain": "^0.1.17",
     "lucide-react": "^0.323.0",
+    "luxon": "^3.4.4",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "pdf-parse": "^1.1.1",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18",
