--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,9 @@ TRIGGER_API_KEY=
 TRIGGER_API_URL=
 NEXT_PUBLIC_TRIGGER_PUBLIC_API_KEY=
 
+# trigger.dev v3
+TRIGGER_SECRET_KEY=
+
 REDIS_REST_URL=
 REDIS_REST_TOKEN=
 
