--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "pnpm prisma:generate & next build",
+    "build": "pnpm postinstall & next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "npx prisma generate",
+    "postinstall": "npx prisma generate",
     "trigger:dev:start": "npx @trigger.dev/cli@latest dev",
     "test": "jest"
   },
@@ -31,9 +31,9 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@trigger.dev/nextjs": "^2.3.18",
-    "@trigger.dev/react": "^2.3.18",
-    "@trigger.dev/sdk": "^2.3.18",
+    "@trigger.dev/nextjs": "3.0.0-beta.22",
+    "@trigger.dev/react": "3.0.0-beta.22",
+    "@trigger.dev/sdk": "3.0.0-beta.22",
     "@upstash/redis": "^1.28.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
