--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@langchain/core": "^0.1.25",
     "@langchain/openai": "^0.0.14",
-    "@neondatabase/serverless": "^0.8.1",
-    "@prisma/adapter-neon": "^5.9.1",
+    "@neondatabase/serverless": "^0.9.3",
+    "@prisma/adapter-neon": "^5.15.0",
     "@prisma/client": "5.9.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -60,6 +60,7 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "trigger.dev": "3.0.0-beta.37",
     "undici": "^6.6.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
