--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.17",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
