chore: package updates

--- a/package.json
+++ b/package.json
@@ -10,79 +10,79 @@
     "postinstall": "npx prisma generate",
     "trigger:dev:start": "npx @trigger.dev/cli@latest dev",
     "trigger:dev:start:v3": "npx trigger.dev@beta dev",
-    "deploy:trigger-prod": "npx trigger.dev@3.0.0-beta.37 deploy",
+    "deploy:trigger-prod": "npx trigger.dev@3.0.0-beta.40 deploy",
     "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@langchain/core": "^0.1.25",
-    "@langchain/openai": "^0.0.14",
+    "@langchain/community": "^0.2.13",
+    "@langchain/core": "^0.2.9",
+    "@langchain/openai": "^0.2.0",
     "@neondatabase/serverless": "^0.9.3",
-    "@prisma/adapter-neon": "^5.15.0",
-    "@prisma/client": "5.9.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@prisma/adapter-neon": "^5.15.1",
+    "@prisma/client": "5.15.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@trigger.dev/nextjs": "3.0.0-beta.37",
-    "@trigger.dev/react": "3.0.0-beta.37",
-    "@trigger.dev/sdk": "3.0.0-beta.37",
-    "@upstash/redis": "^1.28.4",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.1",
+    "@trigger.dev/nextjs": "3.0.0-beta.40",
+    "@trigger.dev/react": "3.0.0-beta.40",
+    "@trigger.dev/sdk": "3.0.0-beta.40",
+    "@upstash/redis": "^1.31.6",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "fast-xml-parser": "^4.3.4",
-    "langchain": "^0.1.17",
-    "lucide-react": "^0.323.0",
+    "fast-xml-parser": "^4.4.0",
+    "langchain": "^0.2.6",
+    "lucide-react": "^0.396.0",
     "luxon": "^3.4.4",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "pdf-parse": "^1.1.1",
-    "pgvector": "^0.1.7",
-    "postmark": "^4.0.2",
+    "pgvector": "^0.1.8",
+    "postmark": "^4.0.4",
     "react": "^18",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
-    "react-latex-next": "^2.2.0",
-    "simple-icons": "^11.3.0",
-    "sonner": "^1.4.0",
-    "swr": "^2.2.4",
-    "tailwind-merge": "^2.2.1",
+    "react-hook-form": "^7.52.0",
+    "react-latex-next": "^3.0.0",
+    "simple-icons": "^12.4.0",
+    "sonner": "^1.5.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "trigger.dev": "3.0.0-beta.37",
-    "undici": "^6.6.2",
-    "use-debounce": "^10.0.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "undici": "^6.19.2",
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.14.8",
     "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.5.0",
+    "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.9.1",
-    "tailwindcss": "^3.3.0",
+    "prisma": "^5.15.1",
+    "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.5.2"
   },
   "trigger.dev": {
     "endpointId": "research-app-WJkC"
