--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@langchain/core": "^0.2.9",
     "@langchain/openai": "^0.2.0",
     "@neondatabase/serverless": "^0.9.3",
-    "@prisma/adapter-neon": "^5.15.1",
-    "@prisma/client": "5.15.1",
+    "@pinecone-database/pinecone": "^2.2.2",
+    "@prisma/adapter-neon": "^5.16.1",
+    "@prisma/client": "5.16.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -49,7 +50,7 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "pdf-parse": "^1.1.1",
-    "pgvector": "^0.1.8",
+    "pgvector": "^0.2.0",
     "posthog-js": "^1.140.1",
     "postmark": "^4.0.4",
     "react": "^18",
@@ -76,13 +77,15 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "eslint": "^9.5.0",
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.15.1",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.16.0",
     "typescript": "^5.5.2"
   },
   "trigger.dev": {
