--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate",
-    "trigger:dev:start": "npx @trigger.dev/cli@latest dev",
-    "trigger:dev:start:v3": "npx trigger.dev@beta dev",
-    "deploy:trigger-prod": "npx trigger.dev@3.0.0-beta.49 deploy",
+    "trigger:dev:start:v3": "npx trigger.dev@latest dev",
+    "deploy:trigger-prod": "npx trigger.dev@3.0.12 deploy",
     "test": "jest"
   },
   "dependencies": {
@@ -35,9 +34,9 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
-    "@trigger.dev/nextjs": "3.0.0-beta.49",
-    "@trigger.dev/react": "3.0.0-beta.49",
-    "@trigger.dev/sdk": "3.0.0-beta.49",
+    "@trigger.dev/nextjs": "3.0.12",
+    "@trigger.dev/react": "3.0.12",
+    "@trigger.dev/sdk": "3.0.12",
     "@upstash/redis": "^1.31.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
