--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pinecone-database/pinecone": "^2.2.2",
     "@prisma/adapter-neon": "^5.16.1",
     "@prisma/client": "5.16.1",
+    "@prisma/instrumentation": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -34,6 +35,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@trigger.dev/build": "^3.0.12",
     "@trigger.dev/nextjs": "3.0.12",
     "@trigger.dev/react": "3.0.12",
     "@trigger.dev/sdk": "3.0.12",
