--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@langchain/community": "^0.2.13",
-    "@langchain/core": "^0.2.9",
-    "@langchain/openai": "^0.2.0",
     "@neondatabase/serverless": "^0.9.3",
-    "@pinecone-database/pinecone": "^2.2.2",
-    "@prisma/adapter-neon": "^5.16.1",
-    "@prisma/client": "5.16.1",
+    "@pinecone-database/pinecone": "^3.0.3",
+    "@prisma/adapter-neon": "^5.20.0",
+    "@prisma/client": "5.20.0",
     "@prisma/instrumentation": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -45,13 +42,11 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "fast-xml-parser": "^4.4.0",
-    "langchain": "^0.2.6",
+    "llamaindex": "^0.6.19",
     "lucide-react": "^0.396.0",
     "luxon": "^3.4.4",
-    "next": "14.2.4",
+    "next": "14.2.15",
     "next-themes": "^0.3.0",
-    "pdf-parse": "^1.1.1",
-    "pgvector": "^0.2.0",
     "posthog-js": "^1.140.1",
     "postmark": "^4.0.4",
     "react": "^18",
@@ -65,6 +60,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "undici": "^6.19.2",
+    "unpdf": "^0.12.1",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
@@ -73,21 +69,20 @@
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.8",
-    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
-    "eslint": "^9.5.0",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.15",
     "jest": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.16.1",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.16.0",
-    "typescript": "^5.5.2"
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   },
   "trigger.dev": {
     "endpointId": "research-app-WJkC"
