--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@llamaindex/edge": "^0.3.8",
     "@neondatabase/serverless": "^0.9.3",
     "@pinecone-database/pinecone": "^3.0.3",
     "@prisma/adapter-neon": "^5.20.0",
@@ -59,6 +60,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiktoken": "^1.0.17",
     "undici": "^6.19.2",
     "unpdf": "^0.12.1",
     "use-debounce": "^10.0.1",
