--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@prisma/extension-optimize": "^1.0.1",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.8",
