feat: trigger dev method updates

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint",
     "postinstall": "npx prisma generate",
     "trigger:dev:start:v3": "npx trigger.dev@latest dev",
-    "deploy:trigger-prod": "npx trigger.dev@3.0.12 deploy",
+    "deploy:trigger-prod": "npx trigger.dev@3.0.13 deploy",
     "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@llamaindex/core": "^0.3.3",
     "@llamaindex/edge": "^0.3.8",
     "@neondatabase/serverless": "^0.9.3",
     "@pinecone-database/pinecone": "^3.0.3",
@@ -33,17 +34,17 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
-    "@trigger.dev/build": "^3.0.12",
-    "@trigger.dev/nextjs": "3.0.12",
-    "@trigger.dev/react": "3.0.12",
-    "@trigger.dev/sdk": "3.0.12",
+    "@trigger.dev/build": "^3.0.13",
+    "@trigger.dev/nextjs": "3.0.13",
+    "@trigger.dev/react": "3.0.13",
+    "@trigger.dev/sdk": "3.0.13",
     "@upstash/redis": "^1.31.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "fast-xml-parser": "^4.4.0",
-    "llamaindex": "^0.6.19",
+    "llamaindex": "^0.7.5",
     "lucide-react": "^0.396.0",
     "luxon": "^3.4.4",
     "next": "14.2.15",
