--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@trigger.dev/build": "^3.0.13",
     "@trigger.dev/nextjs": "3.0.13",
     "@trigger.dev/react": "3.0.13",
@@ -56,6 +56,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-latex-next": "^3.0.0",
+    "react-markdown": "^9.0.1",
     "simple-icons": "^12.4.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
