--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/adapter-neon": "^5.20.0",
     "@prisma/client": "5.20.0",
     "@prisma/instrumentation": "^5.20.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -34,6 +35,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
     "@trigger.dev/build": "^3.0.13",
     "@trigger.dev/nextjs": "3.0.13",
     "@trigger.dev/react": "3.0.13",
