chore: package updates

--- a/.env.template
+++ b/.env.template
@@ -21,4 +21,9 @@ NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
 
 PINECONE_API_KEY=
+PINECONE_INDEX_NAME=
+PINECONE_ENVIRONMENT=
+PINECONE_CHUNK_SIZE=
+PINECONE_CHUNK_OVERLAP=
+
 SEQUIN_WEBHOOK_SECRET=
