--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint",
     "postinstall": "npx prisma generate",
     "trigger:dev:start:v3": "npx trigger.dev@latest dev",
-    "deploy:trigger-prod": "npx trigger.dev@3.0.13 deploy",
-    "test": "jest"
+    "deploy:trigger-prod": "npx trigger.dev@3.1.1 deploy",
+    "test": "jest",
+    "migrate:pinecone:metadata": "ts-node scripts/pinecone-metadata-migration.ts",
+    "migrate:pinecone:timestamp": "ts-node scripts/pinecone-timestamp-migration.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@llamaindex/core": "^0.3.3",
+    "@llamaindex/core": "^0.4.1",
     "@llamaindex/edge": "^0.3.8",
     "@neondatabase/serverless": "^0.9.3",
-    "@pinecone-database/pinecone": "^3.0.3",
+    "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/adapter-neon": "^5.20.0",
     "@prisma/client": "5.20.0",
+    "@prisma/extension-optimize": "^1.0.1",
     "@prisma/instrumentation": "^5.20.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -33,18 +37,20 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.1",
-    "@trigger.dev/build": "^3.0.13",
-    "@trigger.dev/nextjs": "3.0.13",
-    "@trigger.dev/react": "3.0.13",
-    "@trigger.dev/sdk": "3.0.13",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@trigger.dev/build": "^3.1.1",
+    "@trigger.dev/nextjs": "3.1.1",
+    "@trigger.dev/react": "3.1.1",
+    "@trigger.dev/sdk": "3.1.1",
     "@upstash/redis": "^1.31.6",
+    "ai": "^3.4.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "fast-xml-parser": "^4.4.0",
-    "llamaindex": "^0.7.5",
+    "llamaindex": "^0.8.2",
     "lucide-react": "^0.396.0",
     "luxon": "^3.4.4",
     "next": "14.2.15",
@@ -56,6 +62,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-latex-next": "^3.0.0",
+    "react-markdown": "^9.0.1",
     "simple-icons": "^12.4.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
@@ -69,7 +76,6 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@prisma/extension-optimize": "^1.0.1",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.8",
